[tool.poetry]
name = "advent-of-code-23"
version = "0.1.0"
description = ""
authors = ["Alex Thomson <alexthomsonnz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
